# celosia

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
celosia/: __init__.py
celosia/backend/: module.py  signal.py  statement.py
celosia/hdl/: __init__.py  backend.py  blackbox.py  memory.py  module.py  new_hdl.py  utils.py  verilog.py  vhdl.py  wire.py
celosia/hdl/verilog/: __init__.py  backend.py
celosia/hdl/vhdl/: __init__.py  backend.py
celosia/platform/: __init__.py  platform.py
examples/: README.md  adder.py  full_adder.py  run.py
examples/tests/: adder.py  full_adder.py
pyhdl/: __init__.py  pyproject.toml
pyhdl/backend/: module.py  signal.py  statement.py
pyhdl/examples/: adder.py  full_adder.py
pyhdl/hdl/: __init__.py  verilog.py  vhdl.py
v2vhdl/: a2vhdl.py
