[project]
name = "celosia"
authors = [
    { name = "Alan Vekselman", email = "alanvek98@gmail.com" },
]
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "amaranth>=0.5",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["celosia"]
